Networking/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:	
  name: network-ns
  namespace: my-namespace
