Networking/single-firefox-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name:	firefox-web1
    namespace:
    labels:
      app: firefox
spec:
  containers: 
   - image: linuxserver/firefox
     name: firefox-container
     ports:
      - containerPort: 3000
