Networking/single-nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name:	nginx-web1
    namespace:
    labels:
      app: nginx
spec:
  containers: 
   - image: nginx
     name: nginx-container
     ports:
      - containerPort: 80
